src/index.css
html {
  overflow-y: scroll;
  scrollbar-color: rgba(255, 255, 255, 0.1) #282828;
}

::-webkit-scrollbar {
  height: 12px;
  width: 12px;
  background: #282828;
  border-left: 1px solid rgba(255, 255, 255, 0.05);
}

::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.05);
  -webkit-border-radius: 12px;
}

::-webkit-scrollbar-corner {
  background: #282828;
}

